# fern

./: .gitignore  Cargo.toml
shaders/: textured_mesh.wgsl
src/: app.rs  graphics.rs  input.rs  io.rs  lib.rs  logging.rs
src/graphics/: vulkan_backend.rs  wgpu_backend.rs
src/graphics/vulkan_backend/: command_buffer.rs  device.rs  instance.rs  surface.rs  swapchain.rs
src/math/: mesh.rs
