[package]
name = "fern"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test"

[dependencies]
anyhow = "1.0.102"
ash = "0.38.0"
bytemuck = { version = "1.25.0", features = ["bytemuck_derive"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
crossbeam-queue = "0.3.13"
crossbeam-utils = "0.8.22"
glam = { version = "0.33.2", features = ["bytemuck"] }
pollster = "0.4.0"
smallvec = "1.15.2"
thiserror = "2.0.18"
tobj = "4.0.4"

[dependencies.sdl3]
version = "0.18.4"
features = ["ash", "raw-window-handle"]

[dependencies.wgpu]
version = "29.0.3"
default-features = false
features = ["std", "parking_lot", "vulkan", "spirv", "glsl", "wgsl"]

[features]
default = ["log-level-verbose-debug", "vulkan-validation-layers"]
#default = ["log-level-minimal"]
#default = ["log-level-standard"]
vulkan-validation-layers = []
log-level-release = []
log-level-debug = ["log-level-release"]
log-level-verbose-debug = ["log-level-debug"]
